Make deployable on fly.io

--- a/backend/hallway-display.conf
+++ b/backend/hallway-display.conf
@@ -2,3 +2,4 @@
 sl_api_key=$SL_API_KEY
 openweather_api_key=$OPENWEATHER_API_KEY
 api_auth_token=$API_AUTH_TOKEN
+home_coordinates=$HOME_COORDINATES
