--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,10 +7,12 @@ click==8.1.7
 exceptiongroup==1.1.3
 Flask==2.2.2
 Flask-API==3.0.post1
+gunicorn==21.2.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.2
 Pillow==10.1.0
 platformdirs==3.11.0
 pytz==2023.3.post1
